build_log_59.txt
[  2%] Compilando shaders/basic.frag para SPIR-V
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
[ 20%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::render(size_t)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:624:25: error: qualified-id in declaration before ‘(’ token
  624 | void Application::render() {
      |                         ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:650:7: error: ‘else’ without a previous ‘if’
  650 |     } else if (voxelScene_) {
      |       ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:673:23: warning: narrowing conversion of ‘visibleCount’ from ‘int’ to ‘bool’ [-Wnarrowing]
  673 |         /* visible */ visibleCount,
      |                       ^~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:673:23: error: cannot bind non-const lvalue reference of type ‘bool&’ to a value of type ‘int’
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:205: CMakeFiles/sisterapp.dir/src/core/application.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
